l1/lfs158/ch14/ingress/ingress0.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: virtual-host-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: blue.example.com
      http:
        paths:
          - backend:
              service:
                name: webserer-blue-svc
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: green.example.com
      http:
        paths:
          - backend:
              service:
                name: webserver-green-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
