l1/lfs158/ch14/ingress/named-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: ingress-demo
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: stable-color.io
      http:
        paths:
          - backend:
              service:
                name: blue-web
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
    - host: tested-color.io
      http:
        paths:
          - backend:
              service:
                name: green-web
                port:
                  number: 80
            pathType: ImplementationSpecific
            path: /
