l1/lfs158/ch14/ingress/virtual-host-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: fan-out-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: example.com
      http:
       paths:
        - path: /blue
          backend:
            service:
              name: webserver-blue-svc
              port:
                number: 80
          pathType: ImplementationSpecific
        - path: /green
          backend:
           service:
            name: webserver-green-svc
            port:
              number: 80
          pathType: ImplementationSpecific
